replaced div tag w article tag

--- a/starter/index.html
+++ b/starter/index.html
@@ -25,9 +25,9 @@
         </nav>
         </header>
     </div>
-    <section class="hero"></div>
-    <div class="content">
-        <div class="search-engine-optimization">
+    <section class="hero" alt="Group desk photo"></section>
+    <main class="content">
+        <article id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
