--- a/starter/index.html
+++ b/starter/index.html
@@ -27,7 +27,7 @@
     </div>
     <section class="hero" alt="Group desk photo"></section>
     <main class="content">
-        <article id="search-engine-optimization">
+        <article id="search-engine-optimization" class="search-engine-optimization"> 
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
